<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_synchronizacja_dane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="pl.vot.dexterix.zliczanieczasuzlecen.FragmentSynchronizacjaDane">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAdres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/adres_e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextHaslo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/has_o"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextAdresSerwera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/adres_serwera_to_co_po_https" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextKodUrzadzenia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/kod_urz_dzenia" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonZapisz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zapisz" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>